2011-02-14  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-reply): Take an optional switch-buffer parameter
	so that Gnus window confs are respected better.

2011-02-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-backend-parse-parameters): Don't rely on
	`plist-get' to accept non-list parameters (XEmacs issue).  Fix
	docstring.
	(auth-source-secrets-search): Use `delete-dups', `append mapcar', and
	`butlast' instead of `remove-duplicates', `mapcan', and `subseq'.
	(auth-sources, auth-source-backend-parse, auth-source-secrets-search):
	Login collection is "Login" and not "login".

2011-02-14  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-update-date-lapsed): Don't bug out when updating
	multiple headers.

	* nnimap.el (nnimap-inhibit-logging): New variable.
	(nnimap-log-command): Don't log login commands.

	* auth-source.el (auth-source-netrc-search): The asserts seem to want
	to have more parameters.

	* nnimap.el (nnimap-send-command): Mark the command time for each
	command, so that we don't get NOOPs stepping on our toes.

	* gnus-art.el (article-date-ut): Get the date from the Date header on
	`t'.

2011-02-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el (auth-source-search): Use copy-sequence instead of
	the cl.el copy-list.

2011-02-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* imap.el: Bring it back (revert
	84d800cd31de3064f0ed39617d725709a2f8f42f).

2011-02-13  Adam Sjøgren  <asjo@koldfront.dk>

	* gnus-delay.el (gnus-delay-article) Fix number of seconds per day.
	Improve prompt.

2011-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-mode-line-format): Remove the article
	washing status from the default format.  It isn't very informative.

2011-02-13  Tassilo Horn  <tassilo@member.fsf.org>  (tiny change)

	* nnimap.el (nnimap-request-accept-article, nnimap-process-quirk): Fix
	Gcc processing on imap.

2011-02-13  Teodor Zlatanov  <tzz@lifelogs.com>
