@@ -774,7 +774,7 @@ command whose response triggered the error."
 	 (nntp-copy-to-buffer nntp-server-buffer (point-min) (point-max))
          'headers)))))
 
-(deffoo nntp-retrieve-group-data-early-disabled (server infos)
+(deffoo nntp-retrieve-group-data-early (server infos)
   "Retrieve group info on INFOS."
   (nntp-with-open-group nil server
     (when (nntp-find-connection-buffer nntp-server-buffer)
@@ -793,7 +793,7 @@ command whose response triggered the error."
 	     nil command (gnus-group-real-name (gnus-info-group info)))))
 	(length infos)))))
 
-(deffoo nntp-finish-retrieve-group-infos-disabled (server infos count)
+(deffoo nntp-finish-retrieve-group-infos (server infos count)
   (nntp-with-open-group nil server
     (let ((buf (nntp-find-connection-buffer nntp-server-buffer))
 	  (method (gnus-find-method-for-group
@@ -814,10 +814,7 @@ command whose response triggered the error."
 			(< received count)))
 	    (nntp-accept-response))
 	  ;; We now have all the entries.  Remove CRs.
-	  (goto-char (point-min))
-	  (while (search-forward "\r" nil t)
-	    (replace-match "" t t))
-
+	  (nnheader-strip-cr)
 	  (if (not nntp-server-list-active-group)
 	      (progn
 		(nntp-copy-to-buffer nntp-server-buffer
@@ -830,7 +827,9 @@ command whose response triggered the error."
 	      (delete-region (match-beginning 0)
 			     (progn (forward-line 1) (point))))
 	    (nntp-copy-to-buffer nntp-server-buffer (point-min) (point-max))
-	    (gnus-active-to-gnus-format method gnus-active-hashtb nil t)))))))
+	    (with-current-buffer nntp-server-buffer
+	      (gnus-active-to-gnus-format method gnus-active-hashtb
+					  nil t))))))))
 
 (deffoo nntp-retrieve-groups (groups &optional server)
   "Retrieve group info on GROUPS."
